Fix z-index of the alerts on the admin page to appear behind undo popup
#story[571]

--- a/public/stylesheets/bootstrap/bootstrap.css
+++ b/public/stylesheets/bootstrap/bootstrap.css
@@ -5108,6 +5108,7 @@ a.badge-dark:hover, a.badge-dark:focus {
   padding: 0.75rem 1.25rem;
   border: 1px solid transparent;
   border-radius: 0.25rem;
+  z-index: -1;
 }
 
 .alert-heading {
